# sqlacodegen

./: .gitignore  .hgignore  .pep8  .pre-commit-config.yaml  .travis.yml  CHANGES.rst  CONTRIBUTING.rst  README.rst  pre-commit-config.sample.yaml  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/: FUNDING.yml  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yaml
.github/workflows/: codeqa-test.yml  publish.yml  test.yml
sqlacodegen/: __init__.py  codegen.py  main.py
sqlcodegen/: codegen.py  main.py
src/sqlacodegen/: adapters.py  cli.py  codegen.py  collector.py  generators.py  main.py  models.py  utils.py
test/: test_codegen.py
tests/: .test_generator_dataclass.py.swp  .test_generator_declarative.py.swp  conftest.py  test_cli.py  test_codegen.py  test_generator_dataclass.py  test_generator_dataclass2.py  test_generator_declarative.py  test_generator_declarative2.py  test_generator_pydantic.py  test_generator_sqlmodel.py  test_generator_tables.py  test_generator_tables2.py  test_generators.py  utils.py
