[metadata]
name = sqlacodegen
description = Automatic model code generator for SQLAlchemy
long_description = file: README.rst
author = Alex Grönholm
author_email = alex.gronholm@nextday.fi
keywords = sqlalchemy
license = MIT
license_file = LICENSE
project_urls =
    Bug Tracker = https://github.com/agronholm/sqlacodegen/issues
    Source Code = https://github.com/agronholm/sqlacodegen
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Environment :: Console
    Topic :: Database
    Topic :: Software Development :: Code Generators
    Programming Language :: Python
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6

[options]
packages = find:
python_requires = >=2.7, !=3.0, !=3.1, !=3.2, !=3.3
install_requires =
    SQLAlchemy >= 0.8.0
    inflect >= 0.2.0

[options.extras_require]
test =
    pytest
    pytest-cov
    psycopg2-binary
    mysql-connector-python

[options.entry_points]
console_scripts =
    sqlacodegen = sqlacodegen.main:main

[flake8]
max-line-length = 99
exclude = .tox

[tool:pytest]
addopts = -rsx --cov --tb=short

[coverage:run]
source = sqlacodegen

[coverage:report]
show_missing = true

[wheel]
universal = 1
