[metadata]
name = sqlacodegen
description = Automatic model code generator for SQLAlchemy
long_description = file: README.rst
author = Alex Grönholm
author_email = alex.gronholm@nextday.fi
keywords = sqlalchemy
license = MIT
license_file = LICENSE
project_urls =
    Bug Tracker = https://github.com/agronholm/sqlacodegen/issues
    Source Code = https://github.com/agronholm/sqlacodegen
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Environment :: Console
    Topic :: Database
    Topic :: Software Development :: Code Generators
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages = find:
python_requires = >=3.6
install_requires =
    SQLAlchemy >= 1.3.0
    inflect >= 4.0.0

[options.extras_require]
test =
    pytest
    pytest-cov
    psycopg2-binary
    mysql-connector-python
citext = sqlalchemy-citext >= 1.7.0

[options.entry_points]
console_scripts =
    sqlacodegen = sqlacodegen.main:main
